[package]
name = "lut_parser"
version = "2.1.1"
edition = "2018"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Parser for LUT files"
repository = "https://github.com/dakom/lut_parser"
documentation = "https://docs.rs/lut_parser/2.1.0/lut_parser/"

[dependencies]
num-traits = "0.2"
slice-of-array = "0.2.1"
